10/03 un premier test marche